# kdb-c-interface

./: CMakeLists.txt  LICENSE  README.md
docs/: InterfacingWithC.docx
src/: makeprint.q  makeq.c  printq.c
src/w32/: libqtoc.def
